[tool.poetry]
name = "blog-"
version = "0.1.0"
description = ""
authors = ["ktlog <tkb.msk@gmail.com>"]
readme = "README.md"
packages = [{include = "blog_"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
flask-login = "^0.6.2"
psycopg2-binary = "^2.9.5"
flask-wtf = "^1.0.1"
email-validator = "^1.3.0"
python-dotenv = "^0.21.0"
flask-migrate = "^4.0.1"
flask-restful = "^0.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
